fix stretching columns

--- a/styles/style.css
+++ b/styles/style.css
@@ -330,7 +330,7 @@
   }
 
   .content__section:nth-child(2) .content__section-cards {
-    grid-template-columns: repeat(auto-fit, 314px);
+    grid-template-columns: repeat(3, auto);
   }
 
 }
